# server

./: .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml  init.sql  make_env.sh  sample.env  sqlite3.sql
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: Bug_Report.md  Feture_Request.md  Technical_Issue.md
.github/workflows/: main.yaml
dockerfile/: Dockerfile
initdb.d/: init.sql
migrations/202101161232_create_table/: down.sql  up.sql
migrations/202101190020_alter_colmun_not_null/: down.sql  up.sql
migrations/202105240140_add_parameter_type_in_parameters_table/: down.sql  up.sql
migrations/202105240149_add_auto_increment/: down.sql  up.sql
migrations/202105240152_alter_column_nullable/: down.sql  up.sql
migrations/202105240158_rename_equipment_statuses/: down.sql  up.sql
src/: controller.rs  dao.rs  domains.rs  infrastructures.rs  lib.rs  main.rs  models.rs  schema.rs  service.rs  usecases.rs  utils.rs
src/controller/: index.rs  mod.rs  v1.rs
src/controller/v1/: from_game.rs  from_manager.rs
src/dao/: body_free_socket.rs  body_hoge_interface.rs  body_status.rs  equipable_hoge_interface.rs  equipment.rs  equipment_status.rs  hoge_interface.rs  increasing_hoge_interface.rs  parameter.rs  robot.rs  unequipping_hoge_interface.rs
src/domains/: domains.rs  users.rs
src/infrastructures/: infrastructures.rs
src/infrastructures/repository/: users.rs
src/server/: server.rs
src/service/: equipment.rs  hoge_interface.rs  myset.rs  parameter.rs  parameter_chip.rs  robot.rs  user.rs
src/usecases/: usecases.rs
(+19 files in other folders)
