[package]
name = "server"
version = "0.1.0"
authors = ["music-brain88 <music.brain88@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.1.1"
thiserror = "1.0.20"
r2d2 = "0.8.9"
r2d2_sqlite = "0.17.0"
