[package]
name = "server"
version = "0.1.0"
authors = ["music-brain88 <music.brain88@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-rt = "1.1.1"
thiserror = "1.0.20"
diesel = { version = "*", features = ["mysql"] }
dotenv = "0.15.0"
serde = { version = "^1.0.101", features = ["derive"] }
serde_json = "^1.0.41"
