[package]
name = "server"
version = "0.1.0"
authors = ["music-brain88 <music.brain88@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^3"
actix-cors = "0.5.3"
actix-rt = "1.1.1"
thiserror = "1.0.20"
diesel = { version = "*", features = ["mysql"] }
dotenv = "0.15.0"
config = "0.10.1"
serde = "1.0.123"
lazy_static = "1.4.0"
